fix spacing

--- a/src/main/webapp/app/job/job-detail/job-detail.component.scss
+++ b/src/main/webapp/app/job/job-detail/job-detail.component.scss
@@ -101,7 +101,7 @@
 
 .detail-row {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1.5fr 2fr;
   margin-bottom: 0.5rem;
   padding: 0.5rem 0;
   border-bottom: 0.063rem solid var(--p-background-surface);
